NXP-33482: cleanup / format