@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2012 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2012-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -133,7 +133,7 @@ public class TestMultiTemplating {
         TemplateBasedDocument tbd = testDoc.getAdapter(TemplateBasedDocument.class);
         assertNotNull(tbd);
         assertEquals(1, tbd.getTemplateNames().size());
-        assertEquals("odt", tbd.getTemplateNames().get(0));
+        assertEquals("odt", tbd.getTemplateNames().getFirst());
 
         // check rendition
         Blob rendered = tbd.renderWithTemplate("odt");
@@ -164,7 +164,7 @@ public class TestMultiTemplating {
         testDoc = tps.detachTemplateBasedDocument(testDoc, "odt", true);
         tbd = testDoc.getAdapter(TemplateBasedDocument.class);
         assertEquals(1, tbd.getTemplateNames().size());
-        assertEquals("ftl", tbd.getTemplateNames().get(0));
+        assertEquals("ftl", tbd.getTemplateNames().getFirst());
 
         // unbind ftl
         testDoc = tps.detachTemplateBasedDocument(testDoc, "ftl", true);
